# otus-cpp-hw-02

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
allocator_lib/: CMakeLists.txt  MyAllocator.h
mylist_lib/: CMakeLists.txt  MyList.h
src/: CMakeLists.txt  main.cpp
